Adding more Content and Layouting

--- a/der-verein/historie.html
+++ b/der-verein/historie.html
@@ -1,3 +1,8 @@
+---
+layout: default
+title: Historie
+---
+
 <p><strong>Es war einmal vor langer langer Zeit......</strong></p>
 
 <p>...im&nbsp;<strong>Jahre 1854.&nbsp;</strong>Zeitzeugen berichteten davon, dass es in Hart Menschen gab, die sich der Volksmusik verschrieben hatten. Schriftliche Belege daf&uuml;r sind leider auf mysteri&ouml;sen Wegen verloren gegangen. Erste schriftliche Belege fanden sich in Tagebuchaufzeichnungen von Jakob Mesam&nbsp; aus dem&nbsp;<strong>Jahre 1859</strong>.</p>
