--- a/der-verein/mitglieder.html
+++ b/der-verein/mitglieder.html
@@ -1,5 +1,19 @@
 ---
 layout: default
+title: Unsere aktive Kapelle
 ---
 
-<h1>Unsere aktive Kapelle</h1>
+<div class="container-fluid">
+<div id="grid" data-columns>
+{% include kapelle/dirigent.html %}
+{% include kapelle/floete.html %}
+{% include kapelle/klarinette.html %}
+{% include kapelle/saxophon.html %}
+{% include kapelle/trompete.html %}
+{% include kapelle/horn.html %}
+{% include kapelle/tenorhorn.html %}
+{% include kapelle/posaune.html %}
+{% include kapelle/bass.html %}
+{% include kapelle/schlagzeug.html %}
+</div>
+</div>
