--- a/jugend.html
+++ b/jugend.html
@@ -1,27 +1,29 @@
 ---
 layout: default
-title: Jugendarbeit
+title: Ausbildungskonzept – Nachwuchsförderung
 ---
 
-<h2>Kinder / Jugendliche / Erwachsene <br><br>
-Ausbildungskonzept – Nachwuchsförderung</h2>
+<h2>Kinder / Jugendliche / Erwachsene</h2>
 
-<div class="wrapper-rounded">
-<h3>1. Überblick</h3>
-<hr>
-<p style="color:FireBrick"><b>Musik macht kreativer und sozial kompetenter, fördert die Konzentrationsfähigkeit und damit das Leistungsvermögen.</b></p>
+<div class="card">
+    <div class="card-body">
+        <h3 class="card-title">1. Überblick</h3>
+        <hr>
+        <p style="color:FireBrick"><b>Musik macht kreativer und sozial kompetenter, fördert die Konzentrationsfähigkeit und damit das Leistungsvermögen.</b></p>
 
-<p><strong>Konzentration:</strong> Wenn Kinder musizieren, müssen sie mehrere Aufgaben bewältigen und zugleich ihre Aufmerksamkeit bündeln: Das Auge liest Noten, das Gehirn verarbeitet die Informationen, die Hände setzen alles am Instrument um. Diese kompakten Übungen steigern die Konzentrationsfähigkeit. </p>
+        <p><strong>Konzentration:</strong> Wenn Kinder musizieren, müssen sie mehrere Aufgaben bewältigen und zugleich ihre Aufmerksamkeit bündeln: Das Auge liest Noten, das Gehirn verarbeitet die Informationen, die Hände setzen alles am Instrument um. Diese kompakten Übungen steigern die Konzentrationsfähigkeit. </p>
 
-<p><strong>Soziale Kompetenz:</strong> Kinder, die ein Instrument spielen und gemeinsam Musik machen, verstehen sich untereinander besser. In den Musikstunden lernen sie wichtige soziale Kompetenzen wie z.B. sich anpassen, auf andere zugehen, voneinander lernen, gemeinsam Verantwortung tragen und kritikfähig sein. Musikalische Aktivität fördert zudem das Selbstbewusstsein. Auch in außermusikalischen Bereichen des Vereinslebens, wie z.B. bei Veranstaltungen, Auftritten oder Ausflügen wird die soziale Kompetenz der Jungmusiker maßgeblich gefördert.</p>
+        <p><strong>Soziale Kompetenz:</strong> Kinder, die ein Instrument spielen und gemeinsam Musik machen, verstehen sich untereinander besser. In den Musikstunden lernen sie wichtige soziale Kompetenzen wie z.B. sich anpassen, auf andere zugehen, voneinander lernen, gemeinsam Verantwortung tragen und kritikfähig sein. Musikalische Aktivität fördert zudem das Selbstbewusstsein. Auch in außermusikalischen Bereichen des Vereinslebens, wie z.B. bei Veranstaltungen, Auftritten oder Ausflügen wird die soziale Kompetenz der Jungmusiker maßgeblich gefördert.</p>
 
-<p><strong>Kreativität:</strong> Musik ist individuell und frei interpretierbar. Jeder hat seine eigene Art und Weise, Melodien wahrzunehmen und umzusetzen. Für Kinder, die sich aktiv mit Musik beschäftigen, heißt das: Sie üben Fantasie, Kreativität und die Fähigkeit, Gefühle auszudrücken.</p>
+        <p><strong>Kreativität:</strong> Musik ist individuell und frei interpretierbar. Jeder hat seine eigene Art und Weise, Melodien wahrzunehmen und umzusetzen. Für Kinder, die sich aktiv mit Musik beschäftigen, heißt das: Sie üben Fantasie, Kreativität und die Fähigkeit, Gefühle auszudrücken.</p>
+    </div>
 </div>
 
 <br>
 
-<div class="wrapper-rounded">
-<h3>2. Ausbildung</h3>
+<div class="card">
+    <div class="card-body">
+<h3 class="card-title">2. Ausbildung</h3>
 <hr>
 <p>Nachfolgend eine schematische Darstellung über die verschiedenen Phasen der musikalischen Ausbildung im Musikverein Hart.</p>
 <p>Die angegebenen Altersangaben dienen hier lediglich zur Orientierung!</p>
@@ -54,11 +56,13 @@ Ausbildungskonzept – Nachwuchsförderung</h2>
  <p><strong>Quereinstieg</strong></p>
  <p>Auch ältere Jugendliche oder Erwachsene können jederzeit mit der Ausbildung bei uns im Musikverein beginnen. Ein Quereinstieg ist in jeder Phase der Ausbildung für Kinder/Jugendliche und Erwachsene möglich. Selbstverständlich kann ein(e) Musiker(in) direkt in jedes der Orchester aufgenommen werden oder auch ein (Zweit-)Instrument erlernen.</p>
 </div>
+</div>
 
 <br>
 
-<div class="wrapper-rounded">
- <h3>3. Sonstiges</h3>
+<div class="card">
+    <div class="card-body">
+ <h3 class="card-title">3. Sonstiges</h3>
  <hr>
  <p><strong>Instrumente</strong></p>
  <p>Der Musikverein verfügt über einen begrenzten Bestand an Instrumenten, die wir gegen eine geringe Miete zur Verfügung stellen. Darüber hinaus gibt es auch die Möglichkeit, ein Instrument, das gerade nicht zur Verfügung steht, von einem externen Anbieter zu mieten. Später, wenn ein Ausbildungserfolg absehbar ist, ist auch ein Mietkauf eine Variante, sich ein Instrument zu beschaffen.</p>
@@ -66,13 +70,16 @@ Ausbildungskonzept – Nachwuchsförderung</h2>
  <p><strong>Kosten</strong></p>
  <p>Die Kosten für die einzelnen Ausbildungsbereiche gestalten sich recht unterschiedlich und sind immer Abhängig von der Teilnehmerzahl. Grundsätzlich sind es aber vertretbare Kosten, welche sinnvoll in die Ausbildung der Kinder investiert sind. Der Musikverein Hart gewährt ab gewissen Ausbildungsstufen auch Zuschüsse für die Unterrichtseinheiten mit den Musiklehrern und trägt die Gesamtkosten für die jeweiligen Dirigenten.</p>
 </div>
+</div>
 
 <br>
 
-<div class="wrapper-rounded">
- <h3>4. Ansprechpartner</h3>
+<div class="card">
+    <div class="card-body">
+ <h3 class="card-title">4. Ansprechpartner</h3>
  <hr>
  <p>Sollten Sie noch Fragen zu unserem Ausbildungskonzept haben, wenden Sie sich bitte jederzeit an unsere Jugendleiterin Sabrina Konsdorf unter folgenden Kontaktdaten:<br><br>
-<a href="mailto:jugendleiter@musikverein-hart.de" style="box-sizing: border-box; background-color: transparent; color: rgb(0, 150, 136); text-decoration: none;">jugendleiter(at)musikverein-hart.de</a> 
+<a href="mailto:jugendleiter@musikverein-hart.de" class="link-primary">jugendleiter(at)musikverein-hart.de</a> 
 </p>
+</div>
 </div>
