Final touches for 1.0 release

--- a/legal/kontakt.html
+++ b/legal/kontakt.html
@@ -6,7 +6,7 @@ title: Kontakt
     <div class="col">
         <div class="card text-center">
             <div class="card-body">
-                <h5 class="card-title">1. Vorsitzende</h5>
+                <h5 class="card-title">Vorsitzende</h5>
             </div>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item">Julia Biesinger</li>
