--- a/vorstandschaft.html
+++ b/vorstandschaft.html
@@ -2,28 +2,31 @@
 layout: default
 title: Die Vorstandschaft
 ---
-
-<p><strong>1. Vorsitzenden:</strong><br />
-Julia Biesinger<br>
-Mathias Kessler</p>
-
-<p><strong>2. Vorsitzende:</strong><br />
-Tanja Fechter</p>
-
-<p><strong>Schriftf&uuml;hrerin:</strong><br />
-Rosi Maier</p>
-
-<p><strong>Kassier:</strong><br />
-Corinna Stehle-Tömmes</p>
-
-<p><strong>Dirigent:</strong><br />
-Oliver Martini</p>
-
-<p><strong>Jugendleiterin:</strong><br />
-Sabrina Konsdorf</p>
-
-<p><strong>Stellvertredende Jugendleiterin:</strong><br />
-Katja Weckerle</p>
-
-<p><strong>Ausschussmitglieder:</strong><br />
-Hubert Fechter, Florian Klingler, Dieter Klinger, Philipp Kessler, Clara Helmich, Lisa-Marie Heck, Chris Reger</p>
+<div class="card px-0">
+    <div class="row g-0">
+        <div class="col-lg-8">
+            <img class="img-fluid rounded-start" src="assets/media/register/04_Vorstandschaft 3.webp">
+        </div>
+        <div class="col-lg-4">
+            <div class="card-body">
+                <h6 class="card-subtitle mb-2 text-body-secondary">1. Vorsitzenden:</h6>
+                <p class="card-text">Julia Biesinger<br>Mathias Kessler</p>
+                <hr>
+                <h6 class="card-subtitle mb-2 text-body-secondary">2. Vorsitzende:</h6>
+                <p class="card-text">Tanja Fechter</p>
+                <hr>
+                <h6 class="card-subtitle mb-2 text-body-secondary">Kassier:</h6>
+                <p class="card-text">Corinna Stehle-Tömmes</p>
+                <hr>
+                <h6 class="card-subtitle mb-2 text-body-secondary">Dirigent:</h6>
+                <p class="card-text">Oliver Martini</p>
+                <hr>
+                <h6 class="card-subtitle mb-2 text-body-secondary">Jugendleiterinen:</h6>
+                <p class="card-text">Sabrina Konsdorf<br>Katja Weckerle</p>
+                <hr>
+                <h6 class="card-subtitle mb-2 text-body-secondary">Ausschuss</h6>
+                <p class="card-text">Hubert Fechter, Florian Klingler, Dieter Klinger, Philipp Kessler, Clara Helmich, Lisa-Marie Heck, Chris Reger</p>
+            </div>
+        </div>
+    </div>
+</div>
