--- a/jugend.html
+++ b/jugend.html
@@ -77,7 +77,7 @@ title: Ausbildungskonzept – Nachwuchsförderung
         <h3 class="card-title">4. Ansprechpartner</h3>
         <hr>
         <p>Sollten Sie noch Fragen zu unserem Ausbildungskonzept haben, wenden Sie sich bitte jederzeit an unsere Jugendleiterin Sabrina Konsdorf unter folgenden Kontaktdaten:<br><br>
-        <a href="mailto:jugendleiter@musikverein-hart.de" class="btn btn-outline-primary"><i class="fa-solid fa-paper-plane"></i> jugendleiter@musikverein-hart.de</a>
+        <a href="mailto:jugendleiter@musikverein-hart.de" class="btn btn-outline-secondary"><i class="fa-solid fa-paper-plane"></i> jugendleiter@musikverein-hart.de</a>
         </p>
         </div>
         </div>
