--- a/legal/kontakt.html
+++ b/legal/kontakt.html
@@ -15,7 +15,7 @@ title: Kontakt
             </ul>
             <div class="card-footer">
                 <div class="d-grid gap-2">
-                    <a href="mailto:vorstand@musikverein-hart.de" class="btn btn-outline-primary"><i class="fa-solid fa-paper-plane"></i> E-Mail senden</a>
+                    <a href="mailto:vorstand@musikverein-hart.de" class="btn btn-outline-secondary"><i class="fa-solid fa-paper-plane"></i> E-Mail senden</a>
                 </div>
             </div>
         </div>
@@ -31,7 +31,7 @@ title: Kontakt
             </ul>
             <div class="card-footer">
                 <div class="d-grid gap-2">
-                    <a href="mailto:jugendleiter@musikverein-hart.de" class="btn btn-outline-primary"><i class="fa-solid fa-paper-plane"></i> E-Mail senden</a>
+                    <a href="mailto:jugendleiter@musikverein-hart.de" class="btn btn-outline-secondary"><i class="fa-solid fa-paper-plane"></i> E-Mail senden</a>
                 </div>
             </div>
         </div>
