--- a/vorstandschaft.html
+++ b/vorstandschaft.html
@@ -18,6 +18,9 @@ title: Die Vorstandschaft
                 <h6 class="card-subtitle mb-2 text-body-secondary">Kassier:</h6>
                 <p class="card-text">Corinna Stehle-Tömmes</p>
                 <hr>
+                <h6 class="card-subtitle mb-2 text-body-secondary">Schriftführerin:</h6>
+                <p class="card-text">Rosi Maier</p>
+                <hr>
                 <h6 class="card-subtitle mb-2 text-body-secondary">Dirigent:</h6>
                 <p class="card-text">Oliver Martini</p>
                 <hr>
