--- a/downloads.html
+++ b/downloads.html
@@ -12,7 +12,7 @@ title: Downloads
       </div>
       <div class="card-footer">
         <div class="d-grid gap-2">
-            <a href="/assets/media/documents/Beitrittserklaerung_MV.pdf" class="btn btn-outline-primary" target="_blank"><i class="fa-solid fa-file-arrow-down"></i> Download</a>
+            <a href="/assets/media/documents/Beitrittserklaerung_MV.pdf" class="btn btn-outline-secondary" target="_blank"><i class="fa-solid fa-file-arrow-down"></i> Download</a>
         </div>
       </div>
     </div>
@@ -25,7 +25,7 @@ title: Downloads
       </div>
       <div class="card-footer">
         <div class="d-grid gap-2">
-            <a href="/assets/media/documents/Beitrittserklaerung_FV_MV.pdf" class="btn btn-outline-primary" target="_blank"><i class="fa-solid fa-file-arrow-down"></i> Download</a>
+            <a href="/assets/media/documents/Beitrittserklaerung_FV_MV.pdf" class="btn btn-outline-secondary" target="_blank"><i class="fa-solid fa-file-arrow-down"></i> Download</a>
         </div>
       </div>
     </div>
@@ -38,7 +38,7 @@ title: Downloads
       </div>
       <div class="card-footer">
         <div class="d-grid gap-2">
-            <a href="/assets/media/documents/Auslagenersatzformular.pdf" class="btn btn-outline-primary" target="_blank"><i class="fa-solid fa-file-arrow-down"></i> Download</a>
+            <a href="/assets/media/documents/Auslagenersatzformular.pdf" class="btn btn-outline-secondary" target="_blank"><i class="fa-solid fa-file-arrow-down"></i> Download</a>
         </div>
       </div>
     </div>
