--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
-title: Herzlich Willkommen beim Musikverein Hart e.V.
+title: Start
+header: Herzlich Willkommen beim Musikverein Hart e.V.
 ---
 <!-- Intro Content -->
 	<div class="col-md-7">
