--- a/mitglieder.html
+++ b/mitglieder.html
@@ -1,6 +1,7 @@
 ---
 layout: default
-title: Unsere aktive Kapelle
+title: Die Kapelle
+header: Unsere aktive Kapelle
 ---
 
 <div class="container-fluid">
