--- a/partnerkapelle.html
+++ b/partnerkapelle.html
@@ -1,6 +1,7 @@
 ---
 layout: default
-title: Unsere Partnerkapelle die MK Irnfritz
+title: Partner
+header: Unsere Partnerkapelle die MK Irnfritz
 ---
 <div class="row row-cols-1 row-cols-md-2 g-2">
 	<div class="col">
