--- a/vorstandschaft.html
+++ b/vorstandschaft.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Die Vorstandschaft
+header: Die Vorstandschaft
 ---
 <div class="card px-0">
     <div class="row g-0">
