--- a/jugend.html
+++ b/jugend.html
@@ -1,6 +1,7 @@
 ---
 layout: default
-title: Ausbildungskonzept – Nachwuchsförderung
+title: Jugend
+header: Ausbildungskonzept – Nachwuchsförderung
 ---
 
 <h2>Kinder / Jugendliche / Erwachsene</h2>
