--- a/vorstandschaft.html
+++ b/vorstandschaft.html
@@ -23,7 +23,7 @@ header: Die Vorstandschaft
                 <p class="card-text">Rosi Maier</p>
                 <hr>
                 <h6 class="card-subtitle mb-2 text-body-secondary">Dirigent:</h6>
-                <p class="card-text">Oliver Martini</p>
+                <p class="card-text">Johannes Schuler</p>
                 <hr>
                 <h6 class="card-subtitle mb-2 text-body-secondary">Jugendleiterinen:</h6>
                 <p class="card-text">Sabrina Konsdorf<br>Katja Weckerle</p>
